--- a/resources/assets/sass/pages/_home.scss
+++ b/resources/assets/sass/pages/_home.scss
@@ -136,9 +136,10 @@
     background: url('/img/HRA/tape.jpg') no-repeat center center;
     @include backgroundImage;
     @include gradientCoverWhite;
+    @include text;
     .text {
         max-width: 700px;
-        padding: 40px;
+        color: black;
         h1 {
             text-align: left;
         }
